  * password token now supports the 'onetime' parameter as the former spass token did
  * added validator for policy actions
  * new API endpoint to retrieve all currently reported token statuses:
    * /system/getReportedStatuses
      * accepts query parameter `realms` to filter by realms.
        Use `realms=*` to get all realms including `/:no realm:/`.
  * Extend Audit from AdminController

  Fix:
  * After a logout the jwt token can not be reused
  * Correct pagination of sendResultIterator for page 0 and first object in list
  * Filtering for active/inactive token works correctly
  * no more support for truncated transaction ids
  * legacy selfservice qr and push token enrollment breaks with strings in otppin policy
  * More customisation in /selfservice-legacy was broken (Followup to a v3.2.3 fix)
  * drop ability to define autoassignment policy with values
  * `/reporting/delete_before` matches realms to correct policy
  * AdminController and UserserviceController do not trigger reporting on unauthorized requests
  * AdminController triggers reporting for realms correctly
  * UserserviceController triggers reporting for realms correctly

 -- LinOTP Packaging <packaging@linotp.de>  Wed, 23 Feb 2022 08:51:51 +0100

linotp (3.2.5-1) buster; urgency=high

  Release 3.2.5 patches a session handling vulnerability in the Self
  Service API. This patch is necessary for all versions newer than LinOTP
  3.0. We will provide additional details on
  https://linotp.org/linotp-3-2-5.html.

  Fixes:
  * Ensure that userservice login results in exactly one session cookie per
    response.
  * Avoid a race condition in userservice request method setup which could
    lead to a user being erroneously authenticated as a different user. 

  Features:
  * Use entirely random values for userservice session cookies.

  Packaging:
  * Debian postinst now correctly restarts the LinOTP service again to ensure
    running the latest version without the need for manual intervention.
